force-app/main/default/objects/Global_Capability_Location__c/Global_Capability_Location__c.object-meta.xml
<CustomObject>
    <label>Global Capability Location</label>
    <nameField>
        <label>Location</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Global Capability Locations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>