force-app/main/default/objects/Global_Capability_Location__c/fields/Consulting__c.field-meta.xml
<CustomField>
    <fullName>Consulting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consulting</label>
    <type>Checkbox</type>
</CustomField>