force-app/main/default/objects/Global_Capability_Location__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <referenceTo>Global_Capability_Country__c</referenceTo>
    <relationshipName>Global_Capability_Cities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>