force-app/main/default/objects/Global_Capability_Location__c/fields/DMS_Imagine_Scan_to_Store__c.field-meta.xml
<CustomField>
    <fullName>DMS_Imagine_Scan_to_Store__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DMS Imaging - Scan to Store</label>
    <type>Checkbox</type>
</CustomField>