force-app/main/default/objects/Global_Capability_Location__c/fields/HealthCare_Medical_Record__c.field-meta.xml
<CustomField>
    <fullName>HealthCare_Medical_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HealthCare - Medical Record</label>
    <type>Checkbox</type>
</CustomField>