force-app/main/default/objects/Global_Capability_Location__c/fields/Image_on_Demand_Scan_on_Demand__c.field-meta.xml
<CustomField>
    <fullName>Image_on_Demand_Scan_on_Demand__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Image on Demand - Scan on Demand</label>
    <type>Checkbox</type>
</CustomField>