force-app/main/default/objects/Global_Capability_Location__c/fields/IMConnect__c.field-meta.xml
<CustomField>
    <fullName>IMConnect__c</fullName>
    <label>IMConnect</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Rs Web</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>