force-app/main/default/objects/Global_Capability_Location__c/fields/ISO_Standard__c.field-meta.xml
<CustomField>
    <fullName>ISO_Standard__c</fullName>
    <label>Quality Standards - ISO Standard</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>BizSAFE Level2</fullName>
            </value>
            <value>
                <fullName>BizSAFE Level3</fullName>
            </value>
            <value>
                <fullName>EN15713</fullName>
            </value>
            <value>
                <fullName>ISO 14001</fullName>
            </value>
            <value>
                <fullName>ISO 14001:2004</fullName>
            </value>
            <value>
                <fullName>ISO 14001:2005</fullName>
            </value>
            <value>
                <fullName>ISO 18001</fullName>
            </value>
            <value>
                <fullName>ISO 20000</fullName>
            </value>
            <value>
                <fullName>ISO 27001</fullName>
            </value>
            <value>
                <fullName>ISO 28000</fullName>
            </value>
            <value>
                <fullName>ISO 9001</fullName>
            </value>
            <value>
                <fullName>ISO 9001:2000</fullName>
            </value>
            <value>
                <fullName>ISO 9001:2008</fullName>
            </value>
            <value>
                <fullName>Partial</fullName>
            </value>
            <value>
                <fullName>Standard Operating Procedures</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>