force-app/main/default/objects/Global_Capability_Location__c/fields/Last_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Review_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Last Review Date</label>
    <type>Date</type>
</CustomField>