force-app/main/default/objects/Global_Capability_Location__c/fields/Other_RM_System_In_Use__c.field-meta.xml
<CustomField>
    <fullName>Other_RM_System_In_Use__c</fullName>
    <label>Other RM System In Use</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ARC</fullName>
            </value>
            <value>
                <fullName>archivum</fullName>
            </value>
            <value>
                <fullName>Dachs</fullName>
            </value>
            <value>
                <fullName>Documenta</fullName>
            </value>
            <value>
                <fullName>E-Search</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>O&apos;Neil</fullName>
            </value>
            <value>
                <fullName>RSO</fullName>
            </value>
            <value>
                <fullName>SRMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>