force-app/main/default/objects/Global_Capability_Location__c/fields/Salesforce_com__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_com__c</fullName>
    <label>Salesforce.com</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>