force-app/main/default/objects/Global_Capability_Location__c/fields/SecureSync__c.field-meta.xml
<CustomField>
    <fullName>SecureSync__c</fullName>
    <label>SecureSync</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>O&apos;Neil</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>