force-app/main/default/objects/Global_Capability_Location__c/fields/SecureSync_Language__c.field-meta.xml
<CustomField>
    <fullName>SecureSync_Language__c</fullName>
    <label>SecureSync Language</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Chinese</fullName>
            </value>
            <value>
                <fullName>Czech</fullName>
            </value>
            <value>
                <fullName>Dutch</fullName>
            </value>
            <value>
                <fullName>Dutch (Belgium)</fullName>
            </value>
            <value>
                <fullName>Dutch (Netherlands)</fullName>
            </value>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>English (United Kingdom)</fullName>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
            <value>
                <fullName>French (Belgium)</fullName>
            </value>
            <value>
                <fullName>German</fullName>
            </value>
            <value>
                <fullName>Greek</fullName>
            </value>
            <value>
                <fullName>HTML</fullName>
            </value>
            <value>
                <fullName>Hungarian</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Slovak</fullName>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
            <value>
                <fullName>Turkish</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>