force-app/main/default/objects/Global_Capability_Location__c/fields/Shredding_Comments__c.field-meta.xml
<CustomField>
    <fullName>Shredding_Comments__c</fullName>
    <label>Shredding - Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>