force-app/main/default/objects/Global_Capability_Location__c/fields/Shredding_Paper__c.field-meta.xml
<CustomField>
    <fullName>Shredding_Paper__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shredding - Paper</label>
    <type>Checkbox</type>
</CustomField>