force-app/main/default/objects/Global_Capability_Location__c/fields/Shredding_Use_third_party__c.field-meta.xml
<CustomField>
    <fullName>Shredding_Use_third_party__c</fullName>
    <label>Shredding - Use third party</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Partial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>