force-app/main/default/objects/Global_Capability_Location__c/fields/SKP__c.field-meta.xml
<CustomField>
    <fullName>SKP__c</fullName>
    <label>SKP</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Yes, but not for billing</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>