force-app/main/default/objects/Global_Capability_Location__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>If the Last Review Date is greater than 90 days, the record needs review.</description>
    <formula>IF (Last_Review_Date__c  &lt; TODAY()-180, &quot;Needs Review&quot;, &quot;Up-to-date&quot;)</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>