force-app/main/default/objects/Global_Capability_Location__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>City__c</columns>
    <columns>Postal_Code__c</columns>
    <columns>Country__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>