force-app/main/default/objects/Global_Capability_Location__c/listViews/France.listView-meta.xml
<ListView>
    <fullName>France</fullName>
    <columns>NAME</columns>
    <columns>City__c</columns>
    <columns>Postal_Code__c</columns>
    <columns>Country__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>France</value>
    </filters>
    <label>France</label>
    <language>en_US</language>
</ListView>