force-app/main/default/objects/Global_Capability_Location__c/listViews/Turkey.listView-meta.xml
<ListView>
    <fullName>Turkey</fullName>
    <columns>NAME</columns>
    <columns>City__c</columns>
    <columns>Postal_Code__c</columns>
    <columns>Country__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>Turkey</value>
    </filters>
    <label>Turkey</label>
    <language>en_US</language>
</ListView>